# Aerofly-FS4-Bridge

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  aerofly_bridge_dll.cpp  compile.bat
.github/workflows/: release.yml
cmake/: CompilerWarnings.cmake
docs/: README.md  api_reference.md  architecture_deep_dive.md  dll_basics_tutorial.md  installation_guide.md  logging.md  network_programming_tutorial.md  performance_optimization_tutorial.md  python_app_tutorial.md  release_guide.md  testing.md  thread_safety_tutorial.md  variables_reference.md  web_app_tutorial.md
examples/: aerofly_fs4_maps_bridge.py  aerofly_realtime_monitor.py  flight_analyzer.py  master_control_panel.py  tutorial_autopilot_controller.md  tutorial_flight_analyzer.md  tutorial_python_flight_logger.md  tutorial_python_shared_memory.md  tutorial_radio_navigator.md  tutorial_websocket_airspeed_envelope.md  tutorial_websocket_altitude_monitor.md  tutorial_websocket_copilot_checklist.md
include/logging/: logger.h
python/: README.md  aerofly_realtime_monitor.py  flight_logger.py  master_control_panel.py
reference/: json_schema.json
scripts/: build.ps1  compile.bat  make_release.ps1  prepare_release_v0.3.0.ps1  prepare_release_v0.3.1.ps1
simplified/: CMakeLists.txt  README.md  TUTORIAL.md  TUTORIAL_EN.md  aerofly_reader_dll.cpp  build.bat
simplified/examples/: advanced_flight_logger.py  aircraft_tracker.py  flight_logger.py  realtime_monitor.py  simple_reader.py  simple_reader_es.py
simplified/sdk/: PLAN.md  README.md  pyproject.toml
simplified/sdk/aerofly_reader/: __init__.py  async_client.py  client.py  exceptions.py  models.py  shared_memory.py  units.py
simplified/sdk/examples/: async_monitor.py  basic_usage.py  flight_logger_sdk.py  one_shot_read.py
src/logging/: logger.cpp
tests/: CMakeLists.txt  main.cpp  test_helpers.h
tests/integration/: test_shared_memory.cpp  test_tcp_server.cpp  test_websocket_server.cpp
tests/unit/: test_command_processor.cpp  test_json_builder.cpp  test_variable_mapper.cpp
tutorials/: tutorial_autopilot_controller.md  tutorial_flight_analyzer.md  tutorial_python_flight_logger.md  tutorial_python_maps_bridge.md  tutorial_python_shared_memory.md  tutorial_radio_navigator.md  tutorial_websocket_airspeed_envelope.md  tutorial_websocket_altitude_monitor.md  tutorial_websocket_copilot_checklist.md  tutorial_websocket_radio_navigator.md
web/: README.md  airspeed_envelope.html  altitude_monitor.html  copilot_checklist.html  radio_navigator.html
